# MicroSDeck

./: .editorconfig  .gitignore  .mise.toml  .npmrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  build.sh  deploy.example.json  index.html  main.py  mise.toml  package.json  plugin.json  pnpm-lock.yaml  rollup.config.js  rollup.config.mjs  shell.nix  test.mjs  tsconfig.json  version
.devcontainer/: compose.yml  devcontainer.json
.github/: auto_assign-issues.yml  auto_assign.yml
.github/workflows/: build.yml  deploy.yml  lint.yml
backend/: Cargo.toml  Dockerfile  build-docker.sh  build.sh  entrypoint.sh  rust-toolchain.toml
backend/.cargo/: config.toml
backend/benches/: my_benchmark.rs
backend/src/: api.rs  cfg.rs  db.rs  dbo.rs  ds.rs  dto.rs  env.rs  err.rs  event.rs  log.rs  main.rs  sdcard.rs  steam.rs  watch.rs  ws.rs
backend/src/api/: get_card_for_game.rs  get_games.rs  list_card_with_games.rs  list_cards.rs  list_cards_with_games.rs  list_games.rs  list_games_on_card.rs  mod.rs  set_name_for_card.rs
docs/: ChangeLog.mdx  Credits.mdx  MicroSD%20Cards.mdx  Non%20Steam%20Games.mdx  Non-Steam%20Games.mdx  README.md  _Credits.mdx  index.md  index.mdx
docs/codegen/: changelog.codegen  version.codegen
docs/components/: ChangeLog.tsx  CurrentCard.tsx  test.tsx
docs/components/QuickStart/: CheckList.tsx
docs/dir/: test.mdx
frontend/: package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: index.tsx
frontend/src/components/: CardActions.tsx  LibraryModal.tsx
frontend/src/modals/: EditCardModal.tsx
lib/: package.json  pnpm-lock.yaml  tsconfig.json
lib/source/: backend.ts
lib/source/state/: MicoSDeckManager.tsx
lib/src/: MicoSDeck.ts  MicoSDeckManager.ts  backend.ts  hooks.ts  index.ts  types.ts
lib/src/components/: MicroSDeckContext.tsx
lib/src/state/: MicoSDeckManager.ts  MicoSDeckManager.tsx  MicroSDeckContext.tsx
src/: Buttons.tsx  Logging.ts  const.ts  index.tsx  package.json  pnpm-lock.yaml  tsconfig.json  types.d.ts
src/components/: Buttons.tsx  Card.tsx  CardActions.tsx  CardList.tsx  DocPage.tsx  LibraryModal.tsx
src/hooks/: backend.ts
src/lib/: DeckyApi.ts  Types.ts  appOverview.d.ts  package.json
src/lib/src/: backend.ts
src/modals/: EditCardModal.tsx  GamesOnCardModal.tsx
src/pages/: Config.tsx  Docs.tsx  Troubleshooting.tsx  docs.codegen
src/patch/: PatchAppScreen.tsx
src/src/components/: LibraryModal.tsx
src/src/modals/: EditCardModal.tsx
src/src/pages/: Docs.tsx
src/src/patch/: PatchAppScreen.tsx
src/state/: MicoSDeckManager.tsx  MicroSDeckContext.tsx
src/usdpl-front/: package.json  usdpl_front.js  usdpl_front_bg.wasm
util/: build.mjs  ci.mjs  common.js  log.mjs  resetVersion.js  updateVersion.js  versioning.mjs
