[package]
name = "backend"
version = "0.0.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Christopher-Robin <git@cebbinghaus.com>"]

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
once_cell = "1.18.0"
chrono = "0.4.24"
serde_json = "1.0"
serde_alias = "0.0.2"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
futures = "0.3.26"
keyvalues-serde = "0.1.0"                                    # Key Value format that Steam uses
async-trait = "0.1.68"
serde = { version = "1.0.145", features = ["derive", "rc"] }
slotmap = { version = "1.0.6", features = ["serde"] }
glob = "0.3.1"
semver = { version = "1.0.20", features = ["serde"] }
either = "1.9.0"
toml = "0.8.8"
anyhow = "1.0.79"
lazy_static = "1.4.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
tracing-appender = "0.2.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 4

[profile.docker]
inherits = "release"
debug = false
strip = true
lto = "thin"
codegen-units = 16
opt-level = 2
debug-assertions = false
overflow-checks = false
