[package]
name = "backend"
version = "0.0.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Christopher-Robin <git@cebbinghaus.com>"]

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
once_cell = "1.20.2"
chrono = "0.4.38"
serde_json = "1.0"
serde_alias = "0.0.2"
tokio = { version = "1.43.1", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
futures = "0.3.31"
keyvalues-serde = "0.2.1"                                    # Key Value format that Steam uses
async-trait = "0.1.83"
serde = { version = "1.0.213", features = ["derive", "rc"] }
slotmap = { version = "1.0.7", features = ["serde"] }
glob = "0.3.1"
semver = { version = "1.0.23", features = ["serde"] }
either = "1.13.0"
toml = "0.8.19"
anyhow = "1.0.91"
lazy_static = "1.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
tracing-appender = "0.2.3"
unescaper = "0.1.5"
time = "0.3.36"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 4

[profile.docker]
inherits = "release"
debug = false
strip = true
lto = "thin"
codegen-units = 16
opt-level = 2
debug-assertions = false
overflow-checks = false
