[package]
name = "backend"
version = "0.0.0"
edition = "2021"
license = "GPL-2.0"
authors = ["Christopher-Robin <git@cebbinghaus.com>"]

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.0"
once_cell = "1.21.3"
chrono = "0.4.42"
serde_json = "1.0"
serde_alias = "0.0.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures = "0.3.31"
keyvalues-serde = "0.2.2"                                    # Key Value format that Steam uses
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive", "rc"] }
slotmap = { version = "1.0.7", features = ["serde"] }
glob = "0.3.3"
semver = { version = "1.0.27", features = ["serde"] }
either = "1.15.0"
toml = "0.9.8"
anyhow = "1.0.100"
lazy_static = "1.5.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
tracing-appender = "0.2.3"
unescaper = "0.1.6"
time = "0.3.47"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 4

[profile.docker]
inherits = "release"
debug = false
strip = true
lto = "thin"
codegen-units = 16
opt-level = 2
debug-assertions = false
overflow-checks = false
